Fix vertical alignment in header element!

--- a/landing_page/style.css
+++ b/landing_page/style.css
@@ -41,12 +41,13 @@ a {
   background-color: #1f2937;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .nav {
+  width: 80%;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-between;
   padding: 12px 0;
   margin-bottom: 2em;
 }
@@ -58,8 +59,9 @@ a {
 }
 
 .header-info {
+  width: 80%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
@@ -75,7 +77,7 @@ a {
   width: 300px;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 1016px) {
   .header-right-info img {
     display: none;
   }
